# jNavTrack

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cmake.yml
interface/: ViewModel.cpp
simulator/: Dynamics.cpp  KalmanPredictor.cpp  main.cpp
ui/: main.qml
